manifests/ceph/cluster-sukai-pvc-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ceph.platform.aiscope.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
